feat: implement inventory management module including automated supply deduction during appointment completion and product tracking interface