@@ -2,10 +2,8 @@ package cl.bunnycure.web.controller;
 
 import cl.bunnycure.domain.model.ServiceCatalog;
 import cl.bunnycure.service.ServiceCatalogService;
-import cl.bunnycure.web.dto.ApiResponse;
-import cl.bunnycure.web.dto.ErrorResponse;
-import cl.bunnycure.web.dto.ServiceCatalogDto;
-import cl.bunnycure.web.dto.ServiceCatalogResponseDto;
+import cl.bunnycure.service.ServiceSupplyService;
+import cl.bunnycure.web.dto.*;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.media.ArraySchema;
@@ -21,45 +19,25 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-/**
- * REST API Controller para gestión del catálogo de servicios.
- * Expone endpoints CRUD completos con documentación OpenAPI.
- */
 @Slf4j
-@Tag(name = "Services", description = "API para gestión del catálogo de servicios")
+@Tag(name = "Service Catalog", description = "API para gestión del catálogo de servicios e insumos")
 @RestController
 @RequestMapping("/api/services")
 @RequiredArgsConstructor
 public class ServiceCatalogApiController {
 
     private final ServiceCatalogService serviceCatalogService;
+    private final ServiceSupplyService serviceSupplyService;
 
-    @Operation(
-            summary = "Listar servicios",
-            description = """
-                    Obtiene lista de todos los servicios del catálogo.
-                    Por defecto retorna solo servicios activos. Use activeOnly=false para incluir inactivos.
-                    """)
-    @ApiResponses(value = {
-            @io.swagger.v3.oas.annotations.responses.ApiResponse(
-                    responseCode = "200",
-                    description = "Lista de servicios obtenida exitosamente",
-                    content = @Content(
-                            mediaType = "application/json",
-                            array = @ArraySchema(schema = @Schema(implementation = ServiceCatalogResponseDto.class))
-                    )
-            )
-    })
+    @Operation(summary = "Listar servicios activos")
     @GetMapping
-    public ResponseEntity<ApiResponse<List<ServiceCatalogResponseDto>>> list(
-            @Parameter(description = "Mostrar solo servicios activos")
-            @RequestParam(defaultValue = "true") boolean activeOnly) {
+    public ResponseEntity<ApiResponse<List<ServiceCatalogResponseDto>>> listServices(
+            @Parameter(description = "Si es true, solo retorna activos. Si es false/null, retorna todos")
+            @RequestParam(required = false) Boolean activeOnly) {
         
         List<ServiceCatalog> services;
-        
-        if (activeOnly) {
+        if (Boolean.TRUE.equals(activeOnly)) {
             services = serviceCatalogService.findAllActive();
         } else {
             services = serviceCatalogService.findAll();
@@ -67,26 +45,12 @@ public class ServiceCatalogApiController {
         
         List<ServiceCatalogResponseDto> dtos = services.stream()
                 .map(this::toResponseDto)
-                .collect(Collectors.toList());
+                .toList();
         
         return ResponseEntity.ok(ApiResponse.success(dtos));
     }
 
-    @Operation(
-            summary = "Obtener servicio por ID",
-            description = "Obtiene los detalles completos de un servicio específico.")
-    @ApiResponses(value = {
-            @io.swagger.v3.oas.annotations.responses.ApiResponse(
-                    responseCode = "200",
-                    description = "Servicio encontrado",
-                    content = @Content(schema = @Schema(implementation = ServiceCatalogResponseDto.class))
-            ),
-            @io.swagger.v3.oas.annotations.responses.ApiResponse(
-                    responseCode = "404",
-                    description = "Servicio no encontrado",
-                    content = @Content(schema = @Schema(implementation = ErrorResponse.class))
-            )
-    })
+    @Operation(summary = "Obtener servicio por ID")
     @GetMapping("/{id}")
     public ResponseEntity<ApiResponse<ServiceCatalogResponseDto>> getById(
             @Parameter(description = "ID del servicio", required = true)
@@ -98,62 +62,27 @@ public class ServiceCatalogApiController {
         return ResponseEntity.ok(ApiResponse.success(dto));
     }
 
-    @Operation(
-            summary = "Crear nuevo servicio",
-            description = """
-                    Crea un nuevo servicio en el catálogo.
-                    El servicio se crea activo por defecto.
-                    """)
-    @ApiResponses(value = {
-            @io.swagger.v3.oas.annotations.responses.ApiResponse(
-                    responseCode = "201",
-                    description = "Servicio creado exitosamente",
-                    content = @Content(schema = @Schema(implementation = ServiceCatalogResponseDto.class))
-            ),
-            @io.swagger.v3.oas.annotations.responses.ApiResponse(
-                    responseCode = "400",
-                    description = "Datos inválidos",
-                    content = @Content(schema = @Schema(implementation = ErrorResponse.class))
-            )
-    })
+    @Operation(summary = "Crear nuevo servicio")
     @PostMapping
     public ResponseEntity<ApiResponse<ServiceCatalogResponseDto>> create(
             @Valid @RequestBody ServiceCatalogDto request) {
         
         log.info("[API] Creating service: {}", request.getName());
         
-        ServiceCatalog created = serviceCatalogService.save(request);
-        ServiceCatalogResponseDto dto = toResponseDto(created);
+        ServiceCatalog saved = serviceCatalogService.save(request);
+        ServiceCatalogResponseDto dto = toResponseDto(saved);
         
-        return ResponseEntity.status(HttpStatus.CREATED)
-                .body(ApiResponse.success(dto));
+        return ResponseEntity.status(HttpStatus.CREATED).body(ApiResponse.success(dto));
     }
 
-    @Operation(
-            summary = "Actualizar servicio existente",
-            description = "Actualiza los datos de un servicio existente del catálogo.")
-    @ApiResponses(value = {
-            @io.swagger.v3.oas.annotations.responses.ApiResponse(
-                    responseCode = "200",
-                    description = "Servicio actualizado exitosamente",
-                    content = @Content(schema = @Schema(implementation = ServiceCatalogResponseDto.class))
-            ),
-            @io.swagger.v3.oas.annotations.responses.ApiResponse(
-                    responseCode = "404",
-                    description = "Servicio no encontrado",
-                    content = @Content(schema = @Schema(implementation = ErrorResponse.class))
-            )
-    })
+    @Operation(summary = "Actualizar servicio")
     @PutMapping("/{id}")
     public ResponseEntity<ApiResponse<ServiceCatalogResponseDto>> update(
             @Parameter(description = "ID del servicio", required = true)
             @PathVariable Long id,
-            
             @Valid @RequestBody ServiceCatalogDto request) {
         
         log.info("[API] Updating service {}", id);
-        
-        // Asegurar que el ID está en el DTO
         request.setId(id);
         
         ServiceCatalog updated = serviceCatalogService.save(request);
@@ -162,87 +91,68 @@ public class ServiceCatalogApiController {
         return ResponseEntity.ok(ApiResponse.success(dto));
     }
 
-    @Operation(
-            summary = "Activar/Desactivar servicio",
-            description = """
-                    Cambia el estado activo/inactivo de un servicio.
-                    Los servicios inactivos no aparecen en el portal público pero se mantienen en el sistema.
-                    """)
-    @ApiResponses(value = {
-            @io.swagger.v3.oas.annotations.responses.ApiResponse(
-                    responseCode = "200",
-                    description = "Estado cambiado exitosamente",
-                    content = @Content(schema = @Schema(implementation = ServiceCatalogResponseDto.class))
-            ),
-            @io.swagger.v3.oas.annotations.responses.ApiResponse(
-                    responseCode = "404",
-                    description = "Servicio no encontrado",
-                    content = @Content(schema = @Schema(implementation = ErrorResponse.class))
-            )
-    })
+    @Operation(summary = "Cambiar estado activo/inactivo de servicio")
     @PatchMapping("/{id}/toggle-active")
     public ResponseEntity<ApiResponse<ServiceCatalogResponseDto>> toggleActive(
             @Parameter(description = "ID del servicio", required = true)
             @PathVariable Long id) {
         
         log.info("[API] Toggling active status for service {}", id);
-        
         serviceCatalogService.toggleActive(id);
-        
         ServiceCatalog updated = serviceCatalogService.findById(id);
         ServiceCatalogResponseDto dto = toResponseDto(updated);
         
         return ResponseEntity.ok(ApiResponse.success(dto));
     }
 
-    @Operation(
-            summary = "Eliminar servicio",
-            description = """
-                    Elimina un servicio del catálogo.
-                    Si el servicio está siendo usado en citas o solicitudes, se DESACTIVA en lugar de eliminarse.
-                    """)
-    @ApiResponses(value = {
-            @io.swagger.v3.oas.annotations.responses.ApiResponse(
-                    responseCode = "204",
-                    description = "Servicio eliminado exitosamente"
-            ),
-            @io.swagger.v3.oas.annotations.responses.ApiResponse(
-                    responseCode = "200",
-                    description = "Servicio desactivado (no se pudo eliminar porque está en uso)",
-                    content = @Content(schema = @Schema(implementation = ServiceCatalogResponseDto.class))
-            ),
-            @io.swagger.v3.oas.annotations.responses.ApiResponse(
-                    responseCode = "404",
-                    description = "Servicio no encontrado",
-                    content = @Content(schema = @Schema(implementation = ErrorResponse.class))
-            )
-    })
+    @Operation(summary = "Eliminar servicio")
     @DeleteMapping("/{id}")
     public ResponseEntity<ApiResponse<ServiceCatalogResponseDto>> delete(
             @Parameter(description = "ID del servicio", required = true)
             @PathVariable Long id) {
         
         log.info("[API] Deleting service {}", id);
-        
         ServiceCatalogService.DeleteOutcome outcome = serviceCatalogService.delete(id);
         
         if (outcome == ServiceCatalogService.DeleteOutcome.DELETED) {
-            // Eliminado completamente
             return ResponseEntity.noContent().build();
         } else {
-            // Desactivado porque está en uso
             ServiceCatalog service = serviceCatalogService.findById(id);
             ServiceCatalogResponseDto dto = toResponseDto(service);
-            
-            return ResponseEntity.ok(
-                    ApiResponse.success(dto)
-            );
+            return ResponseEntity.ok(ApiResponse.success(dto));
         }
     }
 
-    /**
-     * Convierte una entidad ServiceCatalog a ServiceCatalogResponseDto.
-     */
+    @Operation(summary = "Obtener insumos / receta de un servicio")
+    @GetMapping("/{id}/supplies")
+    public ResponseEntity<ApiResponse<List<ServiceSupplyResponseDto>>> getSupplies(@PathVariable Long id) {
+        List<ServiceSupplyResponseDto> supplies = serviceSupplyService.getSuppliesForService(id);
+        return ResponseEntity.ok(ApiResponse.success(supplies));
+    }
+
+    @Operation(summary = "Guardar/actualizar insumos / receta de un servicio")
+    @PutMapping("/{id}/supplies")
+    public ResponseEntity<ApiResponse<List<ServiceSupplyResponseDto>>> saveSupplies(
+            @PathVariable Long id,
+            @Valid @RequestBody List<ServiceSupplyDto> supplies) {
+        List<ServiceSupplyResponseDto> saved = serviceSupplyService.saveSuppliesForService(id, supplies);
+        return ResponseEntity.ok(ApiResponse.success(saved));
+    }
+
+    @Operation(summary = "Obtener desglose de costos y margen de un servicio")
+    @GetMapping("/{id}/cost-summary")
+    public ResponseEntity<ApiResponse<ServiceCostSummaryDto>> getCostSummary(@PathVariable Long id) {
+        ServiceCostSummaryDto summary = serviceSupplyService.getCostSummaryForService(id);
+        return ResponseEntity.ok(ApiResponse.success(summary));
+    }
+
+    @Operation(summary = "Obtener resumen de costos y márgenes de todos los servicios")
+    @GetMapping("/costs-summary")
+    public ResponseEntity<ApiResponse<List<ServiceCostSummaryDto>>> getAllCostsSummary() {
+        List<ServiceCostSummaryDto> summaryList = serviceSupplyService.getAllServicesCostSummary();
+        return ResponseEntity.ok(ApiResponse.success(summaryList));
+    }
+
     private ServiceCatalogResponseDto toResponseDto(ServiceCatalog service) {
         return ServiceCatalogResponseDto.builder()
                 .id(service.getId())
@@ -252,8 +162,10 @@ public class ServiceCatalogApiController {
                 .price(service.getPrice())
                 .active(service.isActive())
                 .displayOrder(service.getDisplayOrder())
-                .imageUrl(null) // imageUrl no existe en el modelo, por ahora null
-                .compatibleServiceIds(service.getCompatibleServices().stream().map(ServiceCatalog::getId).toList())
+                .imageUrl(null)
+                .compatibleServiceIds(service.getCompatibleServices() != null
+                        ? service.getCompatibleServices().stream().map(ServiceCatalog::getId).toList()
+                        : List.of())
                 .build();
     }
 }
